Stop using commons-io
Not a transitive dep of Maven any more